...
                windowSizeClass = WindowSizeClass.calculateFromSize(DpSize(maxWidth, maxHeight)),
                interestsSelectionState = ForYouInterestsSelectionState.WithInterestsSelection(
                    topics = listOf(
                        FollowableTopic(
                            topic = Topic(
                                id = "0",
                                name = "Headlines",
                                shortDescription = "",
                                longDescription = "",
                                url = "",
                                imageUrl = ""
                            ),
                            isFollowed = false
                        ),
                        FollowableTopic(
                            topic = Topic(
                                id = "1",
                                name = "UI",
                                shortDescription = "",
                                longDescription = "",
                                url = "",
                                imageUrl = ""
                            ),
                            isFollowed = false
...
                        ),
                    ),
                    authors = listOf(
                        FollowableAuthor(
                            author = Author(
                                id = "0",
                                name = "Android Dev",
                                imageUrl = "",
                                twitter = "",
                                mediumPage = "",
                                bio = "",
                            ),
                            isFollowed = false
...
