...
      "longDescription": "Learn about Google Play publish and distrubution system to make your Android applications available to users.",
      "imageUrl": "https://firebasestorage.googleapis.com/v0/b/now-in-android.appspot.com/o/img%2Fic_topic_Publishing-_-Distribution.svg?alt=media&token=64a5aeaf-269a-479d-8a44-29f59d337dbf",
      "url": ""
    },
    {
      "id": "14",
      "name": "Tools",
      "shortDescription": "Gradle, Memory Safety, Debugging",
      "longDescription": "Android Studio, Compose tooling, APK Analyzer, Fast emulator, Intelligent code editor, Flexible build system, Realtime profilers, Gradle, Memory Safety, Debugging",
      "imageUrl": "https://firebasestorage.googleapis.com/v0/b/now-in-android.appspot.com/o/img%2Fic_topic_Tools.svg?alt=media&token=4b5fe6c1-c2c2-4f3c-af34-4a0694d2a2a7",
      "url": ""
    },
    {
...
